feat: 添加 Android APK 构建配置
- 集成 Capacitor 支持 Android 平台
- 配置 Android 签名密钥
- 添加 GitHub Actions 自动构建工作流
- 更新构建脚本和文档

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,10 @@ Thumbs.db
 .env
 .env.local
 
+# Android signing keys (keystore files should not be committed)
+android/keystore/*.keystore
+android/keystore/*.jks
+# Note: keystore.properties is kept for reference, but should use environment variables in production
+
 # Cursor rules (项目规则文档应纳入版本控制，如需忽略请取消注释)
 # .cursor/rules/
