fix: 明确指定 Node.js 22.x 并添加版本验证
- 使用 22.x 确保使用最新 22 版本
- 添加版本验证步骤确认 Node.js 版本

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -21,8 +21,13 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '22'
+        node-version: '22.x'
         cache: 'npm'
+        
+    - name: Verify Node.js version
+      run: |
+        node --version
+        npm --version
         
     - name: Install dependencies
       run: npm ci
