--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -21,13 +21,19 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '22.x'
+        node-version: '22'
         cache: 'npm'
         
     - name: Verify Node.js version
       run: |
+        echo "Node.js version:"
         node --version
+        echo "npm version:"
         npm --version
+        echo "Required: Node.js >= 22.0.0"
+        
+    - name: Clear npm cache
+      run: npm cache clean --force
         
     - name: Install dependencies
       run: npm ci
