--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -101,11 +101,19 @@ jobs:
     - name: Build Release APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        # 检查 keystore 文件是否存在
+        if [ -f "keystore/study-reward.keystore" ]; then
+          echo "Keystore found, building release APK..."
+          ./gradlew assembleRelease
+        else
+          echo "Keystore not found, skipping release build"
+          echo "To build release APK, add keystore file to android/keystore/"
+        fi
       env:
         ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         SIGNING_KEY_PASSWORD: android
         KEY_PASSWORD: android
+      continue-on-error: true
         
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
