fix: 优化发布版 APK 上传条件
- 使用步骤输出判断是否构建了发布版
- 只在发布版成功构建时才上传
- 避免上传不存在的文件

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -98,16 +98,19 @@ jobs:
       env:
         ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         
-    - name: Build Release APK
+    - name: Build Release APK (Optional)
+      id: build_release
       run: |
         cd android
         # 检查 keystore 文件是否存在
         if [ -f "keystore/study-reward.keystore" ]; then
           echo "Keystore found, building release APK..."
           ./gradlew assembleRelease
+          echo "release_built=true" >> $GITHUB_OUTPUT
         else
           echo "Keystore not found, skipping release build"
           echo "To build release APK, add keystore file to android/keystore/"
+          echo "release_built=false" >> $GITHUB_OUTPUT
         fi
       env:
         ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
@@ -123,8 +126,10 @@ jobs:
         retention-days: 30
         
     - name: Upload Release APK
+      if: steps.build_release.outputs.release_built == 'true'
       uses: actions/upload-artifact@v4
       with:
         name: app-release
         path: android/app/build/outputs/apk/release/app-release.apk
         retention-days: 30
+      continue-on-error: true
