refactor: 优化构建步骤 - 同时构建调试版和发布版 APK
- 使用一条 Gradle 命令同时构建两个版本
- 减少构建时间和步骤
- 保持两个 APK 都可用

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -91,13 +91,6 @@ jobs:
         echo "=== Running Capacitor Sync ==="
         ./node_modules/.bin/cap sync android || npx --yes @capacitor/cli@latest sync android
       
-    - name: Build Debug APK
-      run: |
-        cd android
-        ./gradlew assembleDebug
-      env:
-        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-        
     - name: Prepare Keystore for Release Build
       run: |
         cd android
@@ -119,10 +112,11 @@ PROPEOF
       env:
         JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/21.0.17-9/x64
         
-    - name: Build Release APK
+    - name: Build Debug and Release APKs
       run: |
         cd android
-        ./gradlew assembleRelease
+        # 同时构建调试版和发布版 APK
+        ./gradlew assembleDebug assembleRelease
       env:
         ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         
