fix: 修复 keystore 路径问题并添加验证
- 移除 || true 确保 keystore 生成失败会报错
- 添加 keystore 文件存在性验证
- 添加调试输出
- 确保 keystore.properties 总是生成

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -99,14 +99,21 @@ jobs:
         keytool -genkeypair -v -keystore keystore/study-reward.keystore \
           -alias study-reward -keyalg RSA -keysize 2048 -validity 10000 \
           -storepass android -keypass android \
-          -dname "CN=Study Reward App, OU=Development, O=Study Reward, L=City, ST=State, C=CN" || true
-        # 确保 keystore.properties 存在
-        if [ ! -f "keystore/keystore.properties" ]; then
-          echo "storePassword=android" > keystore/keystore.properties
-          echo "keyPassword=android" >> keystore/keystore.properties
-          echo "keyAlias=study-reward" >> keystore/keystore.properties
-          echo "storeFile=keystore/study-reward.keystore" >> keystore/keystore.properties
+          -dname "CN=Study Reward App, OU=Development, O=Study Reward, L=City, ST=State, C=CN"
+        # 验证 keystore 文件已创建
+        if [ ! -f "keystore/study-reward.keystore" ]; then
+          echo "ERROR: Keystore file not created!"
+          exit 1
         fi
+        echo "Keystore file created successfully"
+        ls -lh keystore/
+        # 确保 keystore.properties 存在（相对于 android 目录）
+        echo "storePassword=android" > keystore/keystore.properties
+        echo "keyPassword=android" >> keystore/keystore.properties
+        echo "keyAlias=study-reward" >> keystore/keystore.properties
+        echo "storeFile=keystore/study-reward.keystore" >> keystore/keystore.properties
+        echo "Keystore properties:"
+        cat keystore/keystore.properties
       env:
         JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/21.0.17-9/x64
         
