--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron:dev": "concurrently \"vite\" \"sleep 3 && electron .\"",
     "electron:build": "tsc && tsc -p tsconfig.electron.json && vite build && electron-builder",
     "electron:build:win": "tsc && tsc -p tsconfig.electron.json && vite build && electron-builder --win",
     "electron:build:mac": "tsc && tsc -p tsconfig.electron.json && vite build && electron-builder --mac",
